Add smooth scrolling for going back to top

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <ws-contact id="contact"></ws-contact>
     </div>
     <ws-footer></ws-footer>
+    <ws-go-to-top-button></ws-go-to-top-button>
 </body>
 </html>
