Optimize images and page load times

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Title</title>
+    <meta name="description" content="Personal Website of Wesley Stephenson">
+    <title>Wesley Stephenson</title>
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="preload" as="image" href="./assets/images/wes_stephenson_300px.jpg">
     <script src="assets/scripts/app.js" defer type="module"></script>
 </head>
 <body>
