--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="preload" as="image" href="./assets/images/wes_stephenson_300px.jpg">
+    <link rel="preload" as="image" href="assets/images/wes_stephenson_480px.jpg">
     <script src="assets/scripts/app.js" defer type="module"></script>
 </head>
 <body>
